Fjerner blå rappe rundt editor

--- a/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
+++ b/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
@@ -11,3 +11,9 @@
         background-color: darkgrey;
     }
 }
+.editor{
+    /* Fjerner blå fokus-ring rundt editoren  */
+    *:focus {
+       outline: none;
+    }
+}
