--- a/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
+++ b/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
@@ -1,3 +1,5 @@
+@import '@navikt/ds-css';
+
 .redigeringsMeny {
     padding: 2px;
 
@@ -14,6 +16,12 @@
 .editor{
     /* Fjerner blå fokus-ring rundt editoren  */
     *:focus {
-       outline: none;
+        outline: none;
     }
 }
+
+.errorBorder {
+    border: 2px solid var(--a-border-danger);
+    border-radius: var(--a-border-radius-large);
+}
+
