--- a/pdfgen/templates/felles/hoved.hbs
+++ b/pdfgen/templates/felles/hoved.hbs
@@ -2,6 +2,6 @@
 innhold i denne div'en definerer hva som kan redigeres via frontend.
 NB: Tagg attributter vil ikke bli med tilbake fra frontend.
 -->
-<div data-editable="data-editable">
+<div class="data-editable">
     {{> @partial-block}}
 </div>
