--- a/frontend/src/common/process-menu/step.module.css
+++ b/frontend/src/common/process-menu/step.module.css
@@ -27,12 +27,11 @@
 
 .step {
     position: relative;
+    color: inherit;
 }
 
 .step__button {
     align-items: center;
-    background: transparent;
-    border: none;
     border-radius: 4px;
     display: inline-flex;
     height: 38px;
@@ -68,6 +67,19 @@
 
     &.active:after {
         background: var(--status-color-active);
+    }
+
+    &.disabled {
+        cursor: not-allowed;
+        opacity: 0.5;
+
+        &:hover {
+            background-color: transparent;
+        }
+
+        &:after {
+            background: var(--status-color);
+        }
     }
 }
 
