--- a/frontend/src/common/process-menu/step.module.css
+++ b/frontend/src/common/process-menu/step.module.css
@@ -10,7 +10,7 @@
 
     &:after {
         background: var(--status-color);
-        border-radius: var(--ax-border-radius-medium);
+        border-radius: var(--ax-radius-4);
         bottom: 0;
         content: '';
         display: block;
