--- a/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
+++ b/frontend/src/routes/sak/$saksnummer/-components/htmleditor/TiptapEditor.module.css
@@ -22,6 +22,6 @@
 
 .errorBorder {
     border: 2px solid var(--ax-border-danger);
-    border-radius: var(--ax-border-radius-large);
+    border-radius: var(--ax-radius-8);
 }
 
